--- a/src/Components/Card/Card.module.scss
+++ b/src/Components/Card/Card.module.scss
@@ -11,3 +11,13 @@
     justify-content: space-between;
     font-weight: bold;
 }
+
+.isActive {
+  color: tomato;
+}
+
+button {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
